corrections frontend, votes for comuna for candidate

--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -60,7 +60,7 @@
                         </li>
                         <li id="contComunaVotos">
                           <input type="checkbox" id="ComunaVotos">
-                          <label for="place">Votos por Comunas</label>
+                          <label >Votos por Comunas</label>
                         </li>
                       </ul>   
                   </section>
