corrections files index.html,about.html,landing.html,index.py and app.js

--- a/map/templates/about.html
+++ b/map/templates/about.html
@@ -28,9 +28,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Demo</a></li>
-                <li><a class = "active" href="#">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/demo">Demo</a></li>
+                <li><a class = "active" href="/about">About</a></li>
             </ul>
         </nav>
     </header>
