--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -27,9 +27,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a class = "active" href="#">Demo</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a class = "active" href="/demo">Demo</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </header>
