--- a/map/templates/landing.html
+++ b/map/templates/landing.html
@@ -22,9 +22,9 @@
         </div>
         <nav>
             <ul>
-                <li><a class = "active" href="#">Home</a></li>
-                <li><a href="#">Demo</a></li>
-                <li><a href="#">About</a></li>
+                <li><a class = "active" href="/">Home</a></li>
+                <li><a  href="/demo">Demo</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </header>
