--- a/map/templates/about.html
+++ b/map/templates/about.html
@@ -52,29 +52,19 @@
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium enim facere, hic illum,
-                        impedit
-                        ipsa ipsam maiores nihil porro provident quam, reiciendis repellendus voluptate. Aliquam esse
-                        minima
-                        natus recusandae velit.
+                        We believe in Democracy as a system that guarantees the most freedom to mankind. We also acknowledge world democracies are in crisis. Citizens from every corner of planet Earth are demanding changes, a better society requires an open democracy.
                     </div>
                     <div class="col-md-4 col-sm-12 text-justify">
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolore eaque
-                        in ipsam magnam, molestias mollitia natus nesciunt nobis, quae quaerat quisquam quo repudiandae
-                        suscipit
-                        temporibus vel voluptas!
+                        We understand that it is in politics where society’s big decisions are taken, and we’ve been there, in the campaigns front-lines competing to win an election. Politics is highly competitive and access to data is a critical component to thrive.
                     </div>
                     <div class="col-md-4 col-sm-12 text-justify">
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deserunt quasi
-                        repudiandae sed veniam. Accusantium delectus dicta dolorum ducimus ea illo iusto, magni
-                        molestias
-                        ratione repellendus rerum tenetur totam unde.
+                        We’ve created a new generation of tools that give data power to people and not just to the few that so long have been able to afford it. With the right software our democratic systems can better represent the wind of change blowing from people and nature.
                     </div>
                 </div>
             </div>
