--- a/map/templates/landing.html
+++ b/map/templates/landing.html
@@ -35,12 +35,9 @@
                 <div id="textHead">
                     <h1>Open Democracy</h1>
                         <p> 
-                            Lorem Ipsum is simply dummy text of the printing
-                            and typesetting industry. Lorem Ipsum has been
-                            the industry's standard dummy text ever since the
-                            1500s, when an unknown printer took a galley of
-                            type and scrambled it to make a type specimen book.
-                            It has survived not only five centuries, but also
+                            We are the first free platform to interactively visualize complex data for electoral purposes and designed to facilitate data analysis. 
+                            Through data we empower citizens, organized groups and parties to be more competitive and make our democracy better.
+
                             
                         </p>
                         <a href="#contentHow" class="moreInfoButton">More info</a>
@@ -65,15 +62,10 @@
     <div class="containerFeatures">
         <section class="contentFeat1">
             <div class="containerFeatures1 text">
-                <h1><u class="underline">SELECT A </u>CANDIDATE</h1>
+                <h1><u class="underline">Select a </u>candidate</h1>
                 <br />
                 <p> 
-                    Lorem Ipsum is simply dummy text of the printing
-                    and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the
-                    1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also
+                    Unleash Open Democracy’s data visualization capacities to understand the 2019 electoral process results in Cali, Colombia. Very soon you will find a lot more datasets of other elections and cities.
                     
                 </p>
             </div>
@@ -87,15 +79,10 @@
                 <img class="image1map" src="../static/images/map-function-2.jpg" />
             </div>
             <div  class="containerFeatures2 text">
-                <h1><u class="underline">HOVER ON EA</u>CH POINT</h1>
+                <h1><u class="underline">Navigate the</u> polling places</h1>
                 <br />
                 <p> 
-                    Lorem Ipsum is simply dummy text of the printing
-                    and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the
-                    1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also
+                    Hover the different points to get information about the total amount of ballots in favor of the candidate, the polling place name and more. Points size and colour hint you about how good the result was.
                     
                 </p>
             </div>
@@ -103,15 +90,10 @@
         </section>
         <section class="contentFeat1">
             <div  class="containerFeatures1 text">
-                <h1><u class="underline">SELECT ANO</u>THER OPTION</h1>
+                <h1><u class="underline">Navigate the</u> polling votes by comunas</h1>
                 <br />
                 <p> 
-                    Lorem Ipsum is simply dummy text of the printing
-                    and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the
-                    1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also
+                    Hover the different points to get information about the total amount of ballots in favor of the candidate, the polling place name and more. Points size and colour hint you about how good the result was.
                     
                 </p>
             </div>
@@ -126,15 +108,10 @@
             </div>
 
             <div  class="containerFeatures2 text">
-                <h1><u class="underline">SEE ALL </u>LAYERS </h1>
+                <h1><u class="underline">Enable and</u> disable the layers</h1>
                 <br />
                 <p> 
-                    Lorem Ipsum is simply dummy text of the printing
-                    and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the
-                    1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also
+                    Data is more valuable when you put it in context. Open Democracy’s layer features put together complex information for you to have a better understanding of the electoral process.
                     
                 </p>
             </div>
