corections text and color map comunas

--- a/map/templates/about.html
+++ b/map/templates/about.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="title-about">
-                    <p class="text-center" id="title-about-1">WHY DO THIS PROJECT</p>
+                    <p class="text-center" id="title-about-1">WHY IS OPEN DEMOCRACY GROUNDBREAKING?</p>
                 </div>
             </div>
         </div>
