--- a/map/templates/landing.html
+++ b/map/templates/landing.html
@@ -36,7 +36,7 @@
                     <h1>Open Democracy</h1>
                         <p> 
                             We are the first free platform to interactively visualize complex data for electoral purposes and designed to facilitate data analysis. 
-                            Through data we empower citizens, organized groups and parties to be more competitive and make our democracy better.
+                            <b>Through data we empower citizens</b>, organized groups and parties to be more competitive and make our democracy better.
 
                             
                         </p>
@@ -65,7 +65,7 @@
                 <h1><u class="underline">Select a </u>candidate</h1>
                 <br />
                 <p> 
-                    Unleash Open Democracy’s data visualization capacities to understand the 2019 electoral process results in Cali, Colombia. Very soon you will find a lot more datasets of other elections and cities.
+                    Unleash Open Democracy’s data visualization capacities to <b>understand the 2019 electoral process</b> results in Cali, Colombia. Very soon you will find a lot more datasets of other elections and cities.
                     
                 </p>
             </div>
@@ -82,7 +82,7 @@
                 <h1><u class="underline">Navigate the</u> polling places</h1>
                 <br />
                 <p> 
-                    Hover the different points to get information about the total amount of ballots in favor of the candidate, the polling place name and more. Points size and colour hint you about how good the result was.
+                    Hover the different points to get information about the <b>total amount of ballots</b> in favor of the candidate, the polling place name and more. Points size and colour hint you about how good the result was.
                     
                 </p>
             </div>
@@ -90,10 +90,10 @@
         </section>
         <section class="contentFeat1">
             <div  class="containerFeatures1 text">
-                <h1><u class="underline">Navigate the</u> polling votes by comunas</h1>
+                <h1><u class="underline">Aggregate</u> data by Comuna</h1>
                 <br />
                 <p> 
-                    Hover the different points to get information about the total amount of ballots in favor of the candidate, the polling place name and more. Points size and colour hint you about how good the result was.
+                    Use this powerful feature to understand how Comunas' results impacted overall elections and <b>better plan where you should focus</b> the next political campaign efforts.
                     
                 </p>
             </div>
@@ -111,7 +111,7 @@
                 <h1><u class="underline">Enable and</u> disable the layers</h1>
                 <br />
                 <p> 
-                    Data is more valuable when you put it in context. Open Democracy’s layer features put together complex information for you to have a better understanding of the electoral process.
+                    Data is more valuable when you put it in context. Open Democracy’s layer features put together complex information for you to <b>have a better understanding</b> of the electoral process.
                     
                 </p>
             </div>
