corrections styles responsive

--- a/map/templates/landing.html
+++ b/map/templates/landing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" contentHome="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Democracy</title>
     <link rel="icon" type="image/png" sizes="96x96" href="../static/images/favicon-96x96.png">
     <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
