--- a/map/static/styles/responsive.css
+++ b/map/static/styles/responsive.css
@@ -66,10 +66,18 @@
     section.contentHomeHead{
         padding: 3em 1.5em 1em 1.5em;
         max-height: auto;
-        height: 90vh;
+        min-height: 90vh;
+    }
+    #textHead h1{
+        text-align: center;
+        font-size: 48px;
     }
     body.scroll{
         overflow: auto;
+    }
+    #contentHow h1{
+        text-align: center;
+        padding: 0 0.5em;
     }
     div.containerHomeHow section.contentHow{
         margin: 60px 0px;
@@ -86,6 +94,27 @@
     }
     .containerFeatures1.text, .containerFeatures2.text{
         height: auto;
-        padding-bottom: 1em;
+        padding:0em 1em 1em 1em;
+    }
+    .containerFeatures1.text h1, .containerFeatures2.text h1{
+        text-align: center;
+    }
+    footer.myfeet{
+        padding: 0 1em;
+    }
+
+    /*---------- about ----------*/
+    .title-about #title-about-1{
+        font-size: 28px !important;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    section.contentHomeHead{
+        padding: 3.5em 1.5em 1em 1.5em;
+        min-height: 100vh;
+    }
+    div.contentHead a.viewDemoButton{
+        margin: 10px 0 0 0;
     }
 }
