Add little text corrections

--- a/map/templates/about.html
+++ b/map/templates/about.html
@@ -52,19 +52,19 @@
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        We believe in Democracy as a system that guarantees the most freedom to mankind. We also acknowledge world democracies are in crisis. Citizens from every corner of planet Earth are demanding changes, a better society requires an open democracy.
+                        <b>We believe</b> in Democracy as a system that guarantees the most freedom to mankind. We also acknowledge world democracies are in crisis. Citizens from every corner of planet Earth are demanding changes, a better society requires an open democracy.
                     </div>
                     <div class="col-md-4 col-sm-12 text-justify">
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        We understand that it is in politics where society’s big decisions are taken, and we’ve been there, in the campaigns front-lines competing to win an election. Politics is highly competitive and access to data is a critical component to thrive.
+                        <b>We understand</b> that it is in politics where society’s big decisions are taken, and we’ve been there, in the campaigns front-lines competing to win an election. Politics is highly competitive and access to data is a critical component to thrive.
                     </div>
                     <div class="col-md-4 col-sm-12 text-justify">
                         <div class="col-12 text-center mb-5 mt-5">
                             <i class="fa fa-check-double o-check"></i>
                         </div>
-                        We’ve created a new generation of tools that give data power to people and not just to the few that so long have been able to afford it. With the right software our democratic systems can better represent the wind of change blowing from people and nature.
+                        <b>We’ve created</b> a new generation of tools that give data power to people and not just to the few that so long have been able to afford it. With the right software our democratic systems can better represent the wind of change blowing from people and nature.
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
             <div class="background-tertiary-color ">
                 <h3 class="name-last  ">Christian Nazareno</h3>
                 <img src="../static/images/Cristian.png" class="rounded-circle image-border " alt="Cinque Terre" width="304" height="304">
-                <h3 class="text-center">Front-End Developer and SysAdmin</h3>
+                <h3 class="text-center">Front-End Developer and Map visualization</h3>
                 <div class="postion d-flex justify-content-center ">
                         <div>
                             <a href="https://github.com/ch-canaza" target="_blank">
@@ -182,7 +182,7 @@
             <div class="background-tertiary-color">
                 <h3 class="name-last">Javier Jaramillo</h3>
                 <img src="../static/images/javiJara.png" class="rounded-circle image-border " alt="Cinque Terre">
-                <h3 class="text-center">Front-end Developer and SysAdmin</h3>
+                <h3 class="text-center">Front-end Developer</h3>
                 <div class="postion d-flex justify-content-center ">
                         <div>
                             <a href="https://github.com/J4VJ4R" target="_blank">
