--- a/map/templates/landing.html
+++ b/map/templates/landing.html
@@ -41,7 +41,7 @@
                             
                         </p>
                         <a href="#contentHow" class="moreInfoButton">More info</a>
-                        <a href="/demo" class="viewDemoButton">View Demo</a>
+                        <a href="/demo" class="viewDemoButton"><b>View Demo</b></a>
                 </div>
             </div>
             <div id="imageHead" class="contentHead">
@@ -54,7 +54,7 @@
 
     <div class="containerHomeHow">
         <section id="contentHow" class="contentHow">
-            <h1>HOW DOES IT WORK? </h1>
+            <h1>HOW ARE WE CHANGING POLITICS? </h1>
             
         </section>
     </div>
@@ -125,7 +125,7 @@
    
 </body>
 <footer class="myfeet">
-    <p>copyright @ Open Democracy. All rights reserved</p>
+    <p>Copyright @ Open Democracy. All rights reserved</p>
 </footer>
 
 <script src="../static/js/interactive.js"></script>
